# transaction-tracker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  main.py
app/api/: dependencies.py
app/api/routes/: accounts.py  auth.py  categories.py  loans.py  reports.py  subscriptions.py  transactions.py
app/api/schemas/: __init__.py  account.py  auth.py  category.py  loan.py  report.py  subscription.py  transaction.py
app/api/services/: account_service.py  auth_service.py  category_service.py  loan_service.py  report_service.py  subscription_service.py  transaction_service.py
app/static/css/: components.css  layout.css  variables.css
app/static/js/: account.js  accounts.js  api.js  loans.js  mobile-nav.js  reports.js  subscriptions.js  transactions.js
app/templates/: accounts.html  base.html  dashboard.html  loans.html  login.html  reports.html  setup.html  subscriptions.html  transactions.html
backend/app/: __init__.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: accounts.py  budgets.py  categories.py  dashboard.py  subscriptions.py  transactions.py
data/: .gitkeep
desktop/: api_client.py  main.py
pwa/: index.html  manifest.json  sw.js
pwa/css/: style.css
pwa/js/: app.js
tests/: conftest.py  test_account_service.py  test_accounts.py  test_auth.py  test_auth_service.py  test_pages.py  test_transactions.py
